# Python_Projects

./: Caesar cipher.py  README.md  pyproject.toml  requirements.txt
Final Capstone Project/: Alarm_clock.py  Binary_convertor.py  City_distance.py  Fibnacci_sequence.py  FindCostOfTile.py  FindPI.py  Find_e.py  Find_prime.py  MortgageCalculator.py  Next_primeNumber.py
FlaskAPI/: README.md  binary_search_tree.py  custom_q.py  generate_dummy_data.py  hash_table.py  linked_list.py  requirements.txt  server.py  sqlitedb.file  stack.py
Food Counter/: requirements.txt
Hangman-CLI/: game.py
Milestone Project 1/: Advance.py  Tic_tac.py
Milestone Project 2/: BlackJack.py  CardWAR.ipynb
Python_GUI/: README.md
QRCode Generator/: Qbarcode.ipynb
RockPaperScissor(GUI)/: main.py  rpsEngine.py
Snake game/: READ.md  food.py  main.py  scoreboard.py  snake.py
TIC TAC/: TIC_TAC.bat  TIC_TAC.py  read.me
YoutubeDownloader/: YoutubeDownloader.py  youtube_downloader.py
async_webscraping/: async.py
automated_login_and_browsing/: 1_google_bot.py  2_instaBot.py  README.MD
commandline_tool/: Command Line Tool.ipynb  cli_argparse.py  cli_fire.py  cli_fire_pipefile.py  cli_sys.py  raw_input.py
games/: Caesar cipher.py
jupyter_pipeline/: 1_loadData.ipynb  2_combiningDataframes.ipynb  3_cleanup_data.ipynb  requirements.txt
pyInstaller_tutorial/: build.sh  pyvenv.cfg
python_to_database/: Python to Database via SQL.ipynb  app.db  df_pkl  requirements.txt  users.pk
python_webapp/: README.md  requirements.txt  server.py  views.py
scrape_stackoverflow/: requirements.txt  (+1 more)
(+71 files in other folders)
