[tool.poetry]
name = "python-projects"
version = "0.2.0"
description = "Repository for python projects"
authors = ["Kumar Shanu <49340432+its-Kumar@users.noreply.github.com>"]
readme = "README.md"
package-mode= false


[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.2.2"
fastapi = "*"
jupyter = "*"
pygame = "*"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
